# ftc

./: .gitignore  CMakeLists.txt  README.md
include/Analysis/: ParserTree.h
include/ftc/: UtilDeclare.h
include/ftc/Analysis/: ASTNodeVector.h  BaseEnviroment.h  DrawDotTree.h  DrawTree.h  ParserTree.h  SymbolTable.h  TypeCheck.h  Types.h
include/ftc/LLVMCode/: ActivationRecord.h  BaseCode.h  Closure.h  Heap.h  Translate.h
include/ftc/Support/: Hash.h  PtrVector.h
src/: CMakeLists.txt  Main.c  a.out  lexFTiger.l
src/Analysis/: BaseEnviroment.c  CMakeLists.txt  DrawDotTree.c  DrawTree.c  LexFTiger.l  LexFTiger.l.in  ParserTree.c  SymbolTable.c  SynFTiger.y  Tokens.h  TypeCheck.c  Types.c  UtilLex.h
src/Analysis/TypeCheck/: CMakeLists.txt  TypeCheckDecl.c  TypeCheckExpr.c  TypeCheckUtils.c
src/LLVMCode/: ActivationRecord.c  BaseCode.c  CMakeLists.txt  Closure.c  Heap.c  TranslateDecl.c  TranslateExpr.c  TranslateType.c  TranslateUtil.c
src/Support/: CMakeLists.txt  Hash.c  PtrVector.c
test/: Arith.tgf  Fact.tgf  Queens.tgf  Small.tgf
