SET(FLEX_INPUT "LexFTiger")
SET(BISON_INPUT "SynFTiger")

BISON_TARGET(Parser 
  "${BISON_INPUT}.y" 
  "${CMAKE_CURRENT_BINARY_DIR}/${BISON_INPUT}.c"
  COMPILE_FLAGS "-v")

CONFIGURE_FILE("${FLEX_INPUT}.l.in" "${CMAKE_CURRENT_BINARY_DIR}/${FLEX_INPUT}.l")

FLEX_TARGET(Scanner 
  "${CMAKE_CURRENT_BINARY_DIR}/${FLEX_INPUT}.l" 
  "${CMAKE_CURRENT_BINARY_DIR}/${FLEX_INPUT}.c")

ADD_FLEX_BISON_DEPENDENCY(Scanner Parser)


ADD_EXECUTABLE(ftc ${FLEX_Scanner_OUTPUTS} ${BISON_Parser_OUTPUTS})
TARGET_LINK_LIBRARIES(ftc ${FLEX_LIBRARIES})
INSTALL(TARGETS ftc RUNTIME DESTINATION bin)
